Change HangarUploader to VersionUploader